--- a/.github/workflows/publish-helm-chart.yml
+++ b/.github/workflows/publish-helm-chart.yml
@@ -28,10 +28,11 @@ jobs:
 
       - name: Update chart dependencies
         run: |
+          helm repo add randomurl https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
           helm dependency update charts/mastodon
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.4.1
         env:
-          CR_TOKEN: "asdklfjalkdsf"
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           CR_SKIP_EXISTING: "true"  # if a release already exists for the version, don't try to upload it again
