--- a/.github/workflows/publish-helm-chart.yml
+++ b/.github/workflows/publish-helm-chart.yml
@@ -27,9 +27,7 @@ jobs:
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
       - name: Update chart dependencies
-        run: |
-          helm repo add jupyterhub https://jupyterhub.github.io/helm-chart
-          helm dependency update charts/mastodon
+        run: helm dependency update charts/mastodon
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.4.1
